--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <h3>Paquetes vacacionales cargados mediante el uso del archivo Js</h3>
         <ul type="1">
-            <li>tienda en línea que permite a los usuarios agregar paquetes de viaje a un carrito de compras y finalizar la compra</li>
+            <li>Tienda en línea que permite a los usuarios agregar paquetes de viaje a un carrito de compras y finalizar la compra</li>
     
         </ul>
     </header>
